js/js.translator/testData/incremental/invalidation/genericFunctions/lib1/l1.0.kt
fun <T> foo(x: T) = x
